{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "0fd1fad9-291c-43c2-9732-8016794d4524",
            "actions": [
                {
                    "name": "PointerDelta",
                    "type": "Value",
                    "id": "7d63748f-8dcc-42a4-83ea-fd6ebef510e5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerContact",
                    "type": "Button",
                    "id": "35a3a6bf-fb52-44cf-ace4-6861e43859c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a05519e2-8de0-4ef8-8c72-64cca828c6e8",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a1d7b3b-e859-4339-a789-7090843cfd23",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}